# classical_explosion

./: .gitignore  CMakeLists.txt  README.md  create_video.sh  debug.slurm  gdb.txt  gdb_commands.txt  main.cpp  make_video.sh  output.ppm  render.slurm  run_explosion.sh  slurm_cmake.txt
frames/: untitled.filecache1_v1.0002.ppm  untitled.filecache1_v1.0004.ppm  untitled.filecache1_v1.0005.ppm  untitled.filecache1_v1.0006.ppm  untitled.filecache1_v1.0007.ppm  untitled.filecache1_v1.0008.ppm  untitled.filecache1_v1.0009.ppm  untitled.filecache1_v1.0010.ppm  untitled.filecache1_v1.0011.ppm  untitled.filecache1_v1.0012.ppm  untitled.filecache1_v1.0013.ppm  untitled.filecache1_v1.0014.ppm  untitled.filecache1_v1.0015.ppm  untitled.filecache1_v1.0016.ppm  untitled.filecache1_v1.0017.ppm  untitled.filecache1_v1.0018.ppm  untitled.filecache1_v1.0019.ppm  untitled.filecache1_v1.0020.ppm  untitled.filecache1_v1.0021.ppm  untitled.filecache1_v1.0022.ppm  untitled.filecache1_v1.0023.ppm  untitled.filecache1_v1.0024.ppm  untitled.filecache1_v1.0025.ppm  untitled.filecache1_v1.0026.ppm  untitled.filecache1_v1.0027.ppm  untitled.filecache1_v1.0028.ppm  untitled.filecache1_v1.0029.ppm  untitled.filecache1_v1.0030.ppm  untitled.filecache1_v1.0031.ppm  untitled.filecache1_v1.0032.ppm  untitled.filecache1_v1.0033.ppm  untitled.filecache1_v1.0034.ppm  untitled.filecache1_v1.0035.ppm  untitled.filecache1_v1.0036.ppm  untitled.filecache1_v1.0037.ppm  untitled.filecache1_v1.0038.ppm  untitled.filecache1_v1.0039.ppm  untitled.filecache1_v1.0040.ppm  untitled.filecache1_v1.0041.ppm  untitled.filecache1_v1.0042.ppm
src/: Box.h  Light.h  Plane.h  Volume.h  grid_lookup.cpp  grid_lookup.h  helper.h  sampler.cpp  sampler.h
